--- a/config.yaml
+++ b/config.yaml
@@ -1,3 +1,3 @@
 slack:
-  token: 'your-slack-token'
-  channel: 'your-channel-id'
+  token: 'xoxb-5435744978486-5444961085156-fFEkFGoC06XWllWuRi8t84Xn'
+  channel: 'C05DD0YMKUH'
