--- a/config.yaml
+++ b/config.yaml
@@ -1,3 +1,7 @@
 slack:
-  token: 'your-slack-token'
-  channel: 'your-slack-channel-id'
+  token: your-slack-token
+  channel: your-channel-id
+processes:
+  - process1
+  - process2
+  - process3
